PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Account_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Account_Tenure__c</fullName>
    <formula>YEAR(Today()) - YEAR( Close_Date__c )</formula>
    <label>Account Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>