PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Active Lookup to account</description>
    <inlineHelpText>Active Lookup to account to create filtered related list</inlineHelpText>
    <label>Active Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PFG BAM Investor Positions (Active)</relationshipLabel>
    <relationshipName>Investor_Positions_Account1</relationshipName>
    <type>Lookup</type>
</CustomField>