PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/AUM_Number__c.field-meta.xml
<CustomField>
    <fullName>AUM_Number__c</fullName>
    <label>AUM Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>