PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/BIM_Management_Fee_Annualized__c.field-meta.xml
<CustomField>
    <fullName>BIM_Management_Fee_Annualized__c</fullName>
    <description>SS: added OLD as PSG group is not using it and requested different field to accommodate the needs.</description>
    <label>PSG Management Fee - Annualized_OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>