PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/BPY_Units_Shares_RU_Filter__c.field-meta.xml
<CustomField>
    <fullName>BPY_Units_Shares_RU_Filter__c</fullName>
    <formula>IF(AND(Is_Active__c = true, ISPICKVAL(Ticker__c, &#39;BPY&#39;),  RecordType.Name =&#39;Listed Issuers&#39;), Units_Shares__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPY # Units / Shares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>