PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Bucket_Size__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Size__c</fullName>
    <formula>IF( Historical_Commitment_US__c &gt;= 200000000,&quot;Large $200MM+&quot;,
IF(Historical_Commitment_US__c &gt;= 50000000,&quot;Medium $50-199MM&quot;,
IF(Historical_Commitment_US__c &lt; 50000000,&quot;Average &lt;$50MM&quot;,&quot; &quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated to determine the Bucket Size based on Raised Capital:
Large = &gt;$200MM
Medium = $50 - 199MM
Average = &lt;$50MM</inlineHelpText>
    <label>Bucket Size</label>
    <type>Text</type>
</CustomField>