PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Bypass_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Bits In Glass] : Field added to bypass rollup calculation in Apex Class &quot;ConfigurableRollup&quot;</description>
    <label>Bypass Rollup</label>
    <type>Checkbox</type>
</CustomField>