PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Clearing_Platform__c.field-meta.xml
<CustomField>
    <fullName>Clearing_Platform__c</fullName>
    <description>Field requested by Jillian Boeni for 09/02/16 upload&gt;</description>
    <label>Clearing Platform</label>
    <type>TextArea</type>
</CustomField>