PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Client_at_risk__c.field-meta.xml
<CustomField>
    <fullName>Client_at_risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client at risk</label>
    <type>Checkbox</type>
</CustomField>