PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Close_Round__c.field-meta.xml
<CustomField>
    <fullName>Close_Round__c</fullName>
    <label>Close Round</label>
    <length>100</length>
    <type>Text</type>
</CustomField>