PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Closed_by_Consultant_CRM__c.field-meta.xml
<CustomField>
    <fullName>Closed_by_Consultant_CRM__c</fullName>
    <formula>Opportunity_Name__r.Closed_by_Consultant_CRM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed by Consultant CRM</label>
    <type>Text</type>
</CustomField>