PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Composite__c.field-meta.xml
<CustomField>
    <fullName>Composite__c</fullName>
    <label>Composite</label>
    <length>50</length>
    <type>Text</type>
</CustomField>