PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <inlineHelpText>Autopopulates from Account.</inlineHelpText>
    <label>Country/Region</label>
    <length>40</length>
    <type>Text</type>
</CustomField>