PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Crossover_Investor__c.field-meta.xml
<CustomField>
    <fullName>Crossover_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has an existing Brookfield Private Fund Investment in another platform.</inlineHelpText>
    <label>Crossover Investor</label>
    <type>Checkbox</type>
</CustomField>