PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Current_Investor__c.field-meta.xml
<CustomField>
    <fullName>Current_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Investor</label>
    <type>Checkbox</type>
</CustomField>