PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Current_Investor_Updated__c.field-meta.xml
<CustomField>
    <fullName>Current_Investor_Updated__c</fullName>
    <formula>IF (Investor_Position_Account__r.PFG_Number_of_Current_Commitments__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Investor</label>
    <type>Checkbox</type>
</CustomField>