PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/ECI_Partner__c.field-meta.xml
<CustomField>
    <fullName>ECI_Partner__c</fullName>
    <formula>Investor_Position_Account__r.ECI_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Effectively Connected Income - Investors elect this for tax purposes</inlineHelpText>
    <label>ECI Partner</label>
    <type>Checkbox</type>
</CustomField>