PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Eligible_for_Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Loyalty_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Eligibility for Brookfield&#39;s Loyalty Program.</inlineHelpText>
    <label>Eligible for Loyalty Program</label>
    <type>Checkbox</type>
</CustomField>