PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Equity_Invested_After_Sub__c.field-meta.xml
<CustomField>
    <fullName>Equity_Invested_After_Sub__c</fullName>
    <inlineHelpText>Imported field of the Equity Invested including Subscription Facility Amount (short term loan).</inlineHelpText>
    <label>Equity Invested - After Sub</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>