PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/ERISA__c.field-meta.xml
<CustomField>
    <fullName>ERISA__c</fullName>
    <formula>TEXT(Opportunity_Name__r.Erisa__c)</formula>
    <inlineHelpText>This is populated from the Opportunity record.  To update this field, update the Opportunity record.</inlineHelpText>
    <label>ERISA</label>
    <type>Text</type>
</CustomField>