PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Fee_Base_Other__c.field-meta.xml
<CustomField>
    <fullName>Fee_Base_Other__c</fullName>
    <label>Fee Base - Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>