PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/FIR_Investment_Period_Invested__c.field-meta.xml
<CustomField>
    <fullName>FIR_Investment_Period_Invested__c</fullName>
    <description>FIR - Investment Period - Invested</description>
    <inlineHelpText>Fund Investor Rate based on amount actually invested

Fund Investment Rate is the rate given to investors based on discounts, etc. Different than Fund Headline Rate.</inlineHelpText>
    <label>FIR - Investment Period - Invested</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>