PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Fund_Investor_Rate_Investment_Period__c.field-meta.xml
<CustomField>
    <fullName>Fund_Investor_Rate_Investment_Period__c</fullName>
    <description>FIR - Investment Period - Committed</description>
    <inlineHelpText>Fund Investor Rate based on amount committed

Fund Investment Rate is the rate given to investors based on discounts, etc. Different than Fund Headline Rate</inlineHelpText>
    <label>FIR - Investment Period - Committed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>