PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Historical_Commitment_US__c.field-meta.xml
<CustomField>
    <fullName>Historical_Commitment_US__c</fullName>
    <inlineHelpText>Imported field of Historical/Original Commitments raised for the Fund in USD.</inlineHelpText>
    <label>Raised Capital - USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>