PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Institutional_Retail__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Retail__c</fullName>
    <label>Institutional/Retail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>