PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Investment_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Investment_Vehicle__c</fullName>
    <label>Investment Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Investment_Vehicle__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive, Discontinued, Closed</value>
        </filterItems>
        <filterItems>
            <field>Investment_Vehicle__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Archived and Deactivated Investment Vehicle</value>
        </filterItems>
        <infoMessage>Filtered by Funds in the Market. Click SHOW ALL to expand the list. Please DO NOT Create Investor Position for Inactive, Discontinued, Closed Vehicles</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Investment_Vehicle__c</referenceTo>
    <relationshipLabel>Investor Positions</relationshipLabel>
    <relationshipName>Investor_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>