PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Investment_Vehicle_Active__c.field-meta.xml
<CustomField>
    <fullName>Investment_Vehicle_Active__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>to help filtered list</description>
    <inlineHelpText>to help filtered list</inlineHelpText>
    <label>Investment Vehicle (Active)</label>
    <referenceTo>Investment_Vehicle__c</referenceTo>
    <relationshipLabel>Investor Positions (Investment Vehicle (Active))</relationshipLabel>
    <relationshipName>Investor_Positions_InvestmentVehicle</relationshipName>
    <type>Lookup</type>
</CustomField>