PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Investor_Position_Account_R__c.field-meta.xml
<CustomField>
    <fullName>Investor_Position_Account_R__c</fullName>
    <formula>Investor_Position_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reference to Parent Investor Position</inlineHelpText>
    <label>Investor Position Account (R)</label>
    <type>Text</type>
</CustomField>