PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Investor_Position_Count__c.field-meta.xml
<CustomField>
    <fullName>Investor_Position_Count__c</fullName>
    <description>Power of one formula</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Power of one formula</inlineHelpText>
    <label>Investor Position Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>