PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Investor_Position_Record_ID_Q3_2016__c.field-meta.xml
<CustomField>
    <fullName>Investor_Position_Record_ID_Q3_2016__c</fullName>
    <description>Investor Position Record ID for Q3 2017 for future reference</description>
    <label>Investor Position Record ID Q3 2018</label>
    <length>100</length>
    <type>Text</type>
</CustomField>