PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Management_Base_Fee_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Management_Base_Fee_Schedule__c</fullName>
    <label>Management Base Fee - Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>