PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Management_Fee_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Annualized__c</fullName>
    <label>Management Fee - Annualized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>