PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Mandate_Family_Series_Unique_Count__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Family_Series_Unique_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mandate Family Series Unique Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>