PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Mandate_Series_Family_Text__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Series_Family_Text__c</fullName>
    <description>Mandate Series Family helper field for account roll up</description>
    <inlineHelpText>Mandate Series Family helper field for account roll up</inlineHelpText>
    <label>Mandate Series Family Text</label>
    <length>150</length>
    <type>Text</type>
</CustomField>