PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/No_of_BPY_Shareholder_RU_Filter__c.field-meta.xml
<CustomField>
    <fullName>No_of_BPY_Shareholder_RU_Filter__c</fullName>
    <formula>IF(AND(Is_Active__c = false, ISPICKVAL(Ticker__c, &#39;BPY&#39;),  RecordType.Name =&#39;Listed Issuers&#39;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of BPY Shareholder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>