PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Non_Discretionary_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Non_Discretionary_Account_Name__c</fullName>
    <description>Field with limited access to the general users. Do not give access to this field on any profiles. Access is only to be granted using the special Permission Set.</description>
    <formula>Active__r.Non_Discretionary_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Discretionary Account Name</label>
    <type>Text</type>
</CustomField>