PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Performance_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Performance_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performance Incentive</label>
    <type>Checkbox</type>
</CustomField>