PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/PFG_Avl_for_Drdwn_After_Sub_RU_Filter__c.field-meta.xml
<CustomField>
    <fullName>PFG_Avl_for_Drdwn_After_Sub_RU_Filter__c</fullName>
    <formula>IF(AND(Is_Active__c = true, RecordType.Name =&#39;Fund Internal&#39;), Historical_Commitment_Functional__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFG Available for Drawdown - After Sub</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>