PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/PFG_Num_of_Orgnl_Commits_RU_Filter__c.field-meta.xml
<CustomField>
    <fullName>PFG_Num_of_Orgnl_Commits_RU_Filter__c</fullName>
    <formula>IF(AND(Is_Active__c = true, RecordType.Name =&#39;Fund Internal&#39;, Historical_Commitment_US__c &gt; 0), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFG Number of Original Commitments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>