PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/PFG_Platform_Text__c.field-meta.xml
<CustomField>
    <fullName>PFG_Platform_Text__c</fullName>
    <description>To copy the platform</description>
    <inlineHelpText>To copy the platform</inlineHelpText>
    <label>PFG Platform Text</label>
    <length>150</length>
    <type>Text</type>
</CustomField>