PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/PFG_Total_NAV_RU_Filter__c.field-meta.xml
<CustomField>
    <fullName>PFG_Total_NAV_RU_Filter__c</fullName>
    <formula>IF(AND(Is_Active__c = true, RecordType.Name =&#39;Fund Internal&#39;), NAV__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFG Total NAV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>