PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <formula>TEXT(Investment_Vehicle__r.Platform__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform</label>
    <type>Text</type>
</CustomField>