PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Primary_Mktg_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mktg_Rep__c</fullName>
    <formula>Investor_Position_Account__r.BIM_Primary_Mktg_Rep__r.FirstName &amp; &quot; &quot; &amp; Investor_Position_Account__r.BIM_Primary_Mktg_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Mktg Rep</label>
    <type>Text</type>
</CustomField>