PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/PSG__c.field-meta.xml
<CustomField>
    <fullName>PSG__c</fullName>
    <formula>OR(RecordType.DeveloperName = &quot;Child PSG Investor Positions&quot;,RecordType.DeveloperName=&quot;Parent Public Securities&quot;)</formula>
    <label>PSG</label>
    <type>Checkbox</type>
</CustomField>