PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/PSG_active_account__c.field-meta.xml
<CustomField>
    <fullName>PSG_active_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hack used to display PSG parent positions</description>
    <label>PSG  Active account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parent Public Securities</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PSG Parent Investor Position (Active)</relationshipLabel>
    <relationshipName>Investor_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>