PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Re_up_investor_same_platform__c.field-meta.xml
<CustomField>
    <fullName>Re_up_investor_same_platform__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has investment in same platform.</inlineHelpText>
    <label>Re-up Investor - same platform</label>
    <type>Checkbox</type>
</CustomField>