PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Realized_Carried_Interest_YTD__c.field-meta.xml
<CustomField>
    <fullName>Realized_Carried_Interest_YTD__c</fullName>
    <label>Realized Carried Interest - YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>