PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Size_Discount__c.field-meta.xml
<CustomField>
    <fullName>Size_Discount__c</fullName>
    <label>Size Discount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>