PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Sticker_Rate_IP_Uninvested__c.field-meta.xml
<CustomField>
    <fullName>Sticker_Rate_IP_Uninvested__c</fullName>
    <label>Sticker Rate-IP-Uninvested</label>
    <length>100</length>
    <type>Text</type>
</CustomField>