PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Tax_ID_Number_manual_del__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Number_manual_del__c</fullName>
    <inlineHelpText>Update the Tax ID number for this investor position.</inlineHelpText>
    <label>Tax ID Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>