PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>