PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Top_up_Investor_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Top_up_Investor_Commitments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Secondary Investment to the same Fund.</inlineHelpText>
    <label>Top up Investor/Commitments</label>
    <type>Checkbox</type>
</CustomField>