PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/fields/Total_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Total_Contributions__c</fullName>
    <inlineHelpText>Sum of the Investor Position children</inlineHelpText>
    <label>Total YTD Contributions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>