PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/recordTypes/Archived_and_Deactivated_Investment_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Archived_and_Deactivated_Investment_Vehicle</fullName>
    <active>true</active>
    <description>This Record type is used for archiving inactive investor positions. System Admin Access only</description>
    <label>Archived and Deactivated Investment Vehicle</label>
</RecordType>