PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/recordTypes/Fund_Internal.recordType-meta.xml
<RecordType>
    <fullName>Fund_Internal</fullName>
    <active>true</active>
    <description>PFG Funds / Mandates</description>
    <label>Fund Internal</label>
</RecordType>