PROD-12-18-19/force-app/main/default/objects/Investor_Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>As_of__c</field>
        <operation>equals</operation>
        <value>12/31/2016</value>
    </filters>
    <label>All</label>
</ListView>